Migrate null safety

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,9 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: '>=2.18.0 <3.0.0'
+
+publish_to: none
 
 dependencies:
   flutter:
